--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -3,12 +3,12 @@
   --foreground: #171717;
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   :root {
-    --background: #ffffff;
-    --foreground: #ededed;
+    --background: #787878;
+    --foreground: #ffffff;
   }
-}
+} */
 
 html,
 body {
