feature/Chat component can read input values

--- a/frontend/components/ChatComponent/ChatComponene.module.css
+++ b/frontend/components/ChatComponent/ChatComponene.module.css
@@ -1,4 +1,13 @@
 .chatComponent {
     background-color: #aba9a9;
     height: 100%;
+    display: flex;
+    flex-direction: column;
 }
+
+.chatBox {
+    width: 100%;
+    margin-top: auto;
+    padding: 50px;
+}
+    
