--- a/frontend/components/ChatComponent/ChatComponene.module.css
+++ b/frontend/components/ChatComponent/ChatComponene.module.css
@@ -1,5 +1,5 @@
 .chatComponent {
-    background-color: #aba9a9;
+    background-color: #ffffff;
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -8,6 +8,16 @@
 .chatBox {
     width: 100%;
     margin-top: auto;
-    padding: 50px;
+    padding: 10px 20px 50px 20px;
 }
     
+.messagesContainer{
+
+    overflow-y: auto;
+    height: 100%;
+
+    border: 1px solid #ccc;
+
+
+
+}
