--- a/frontend/app/overview/page.module.css
+++ b/frontend/app/overview/page.module.css
@@ -1,6 +1,6 @@
 .mainContainer {
   margin-left: 120px; /* Match SideNav width */
-  padding: 140px 32px 32px 32px; /* top/right/bottom/left */
+  padding:  32px 32px 32px; /* top/right/bottom/left */
   box-sizing: border-box;
   
 }
