--- a/frontend/components/SideNav/SideNav.module.css
+++ b/frontend/components/SideNav/SideNav.module.css
@@ -14,4 +14,12 @@
     overflow-wrap: break-word;
     word-break: break-word;
     white-space: normal;
+
 }
+
+.Link{
+    text-decoration: none;
+    color: inherit;
+}
+
+.sideBarButton{margin:0;-webkit-appearance:none;-moz-appearance:none;-ms-appearance:none;appearance:none;background:none;border:none;cursor:pointer;position:relative;width:100%;min-height:32px;padding:6px 1px;box-sizing:border-box;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;font-family:'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;font-weight:400;text-align:left;-webkit-text-decoration:none;text-decoration:none;text-transform:capitalize;-webkit-transition:background-color 100ms ease-in-out;transition:background-color 100ms ease-in-out;color:#001E2B;background-color:rgba(249,251,250,0);font-size:13px;line-height:20px;position:relative;}
