--- a/frontend/components/OverviewCard/OverviewCard.module.css
+++ b/frontend/components/OverviewCard/OverviewCard.module.css
@@ -15,3 +15,9 @@
     margin-bottom: 16px;
     align-items: center;
 }
+.overviewCard{
+    max-height: 32rem;
+    overflow-y: auto;
+    background: #fff;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
