--- a/frontend/components/TabsComponent/TabsComponent.module.css
+++ b/frontend/components/TabsComponent/TabsComponent.module.css
@@ -1,11 +1,11 @@
 .HorizontalCutHalf {
   display: flex;
   flex-direction: column;
-  height: 100%;
+  height: 24rem;
   min-height: 320px;
   gap: 1.5rem;
   padding: 1.5rem 1rem 1rem 1rem;
-  background: #f9fafb;
+  background: whitesmoke;
   border-radius: 10px;
 }
 
@@ -13,7 +13,6 @@
   display: flex;
   flex-direction: row;
   gap: 1.5rem;
-  margin-bottom: 1rem;
 }
 
 .VerticalCutHalf > div {
@@ -29,17 +28,20 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  padding-bottom: 0.1rem;
 }
 
 .bottomHalf {
   background: white;
   border-radius: 8px;
-  padding: 1rem 1rem;
-  min-height: 120px;
+  padding-top: 1rem;
+  height: 22rem;
   box-shadow: 0 1px 4px rgba(0,0,0,0.03);
   display: flex;
   align-items: center;
-  flex-direction: column
+  flex-direction: column;
+  overflow-y: scroll;
+  min-height: 14.5rem;
 }
 
 .topHalf {
