Fixed error with class to className in Login, finished front of fleet config with redux and document model

--- a/frontend/components/LoginManager/LoginManager.module.css
+++ b/frontend/components/LoginManager/LoginManager.module.css
@@ -57,3 +57,11 @@
   grid-template-columns: repeat(3, 1fr);
   gap: 24px;
 }
+.selectedFleetBox {
+  background-color: #00ED64; /* mongo */
+  border-radius: 8px;
+  transition: background 0.2s;
+}
+.Desc{
+  padding-left: 0.4rem;
+}
