--- a/frontend/components/FilterComponent/FilterComponent.module.css
+++ b/frontend/components/FilterComponent/FilterComponent.module.css
@@ -1,6 +1,36 @@
 .filterComponent {
-    background-color: #494949;
-    color: white;
-    height: 100%;
+  background-color: #ffffff;
+  color: white;
+  height: 100%;
+  padding: 10px;
+  box-sizing: border-box;
+  border-left: gray 1px solid;
 }
 
+.cardWrapper {
+  padding: 12px;
+  border-radius: 0;
+  margin-bottom: 0px;
+}
+
+.filterGrid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 24px;
+}
+
+.checkboxGroup {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, auto);
+  gap: 12px;
+align-content: start; /* 👈 forces content to stick to top */
+
+}
+
+.groupTitle {
+  grid-column: span 2;
+  font-size: 0.9rem;
+  margin-bottom: 8px;
+  color: black;
+}
