--- a/frontend/components/ChatComponent/ChatComponene.module.css
+++ b/frontend/components/ChatComponent/ChatComponene.module.css
@@ -1,5 +1,5 @@
 .chatComponent {
-    background-color: #ffffff;
+    background-color: #f8faf9;
     height: 100%;
     display: flex;
     flex-direction: column;
