--- a/frontend/components/ChatInput/ChatInput.module.css
+++ b/frontend/components/ChatInput/ChatInput.module.css
@@ -1,9 +1,16 @@
 .chatInput {
     display: flex;
-    align-items: flex-end;
-    justify-content: space-between;
-    gap: 10px;
+    align-items: center;
+    margin-top: 10px;
+    padding: 0px 10px 0px 10px;
 }
+
+.chatInput input {
+    flex-grow: 1;
+    padding: 10px;
+    border-radius: 10px;
+    margin-right: 10px;
+}  
 
 .inputText {
     width: 100%;
