added message selecting

--- a/frontend/components/FilterComponent/FilterComponent.module.css
+++ b/frontend/components/FilterComponent/FilterComponent.module.css
@@ -23,7 +23,7 @@
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(2, auto);
   gap: 12px;
-align-content: start; /* 👈 forces content to stick to top */
+  align-content: start;
 
 }
 
