--- a/frontend/components/TextBubbleComponent/TextBubbleComponent.module.css
+++ b/frontend/components/TextBubbleComponent/TextBubbleComponent.module.css
@@ -1,10 +1,3 @@
-.botBubble {
-  background-color: #f0f0f0;
-  
-  margin: 5px 0 5px 15px;
-  max-width: 70%;
-  border: black 1px solid;
-}
 
 .chatContainer {
   display: flex;
@@ -19,6 +12,7 @@
   display: inline-block;
   max-width: 90%;
   word-wrap: break-word;
+  word-break: break-word;
   box-shadow: 0px 5px 4px rgba(0, 0, 0, 0.06);
   font-size: 13px;
   border-radius: 20px;
@@ -28,12 +22,11 @@
   margin-left: auto; /* Aligns the bubble to the right */
   background-color: #e0fbf6;
   text-align: right; /* Aligns text to the right */
-  max-width: fit-content;
   display: flex; /* Ensures the content is aligned properly */
   justify-content: flex-end; /* Justifies the content to the right */
   word-wrap: break-word;
-  max-width: 90%;
   display: inline-block;
+  max-width: 90%;
   box-shadow: 0px 5px 4px rgba(0, 0, 0, 0.06);
 }
 
@@ -42,6 +35,7 @@
   box-shadow: 0px 5px 4px rgba(0, 0, 0, 0.06);
   transition: opacity 0.5s ease-in-out; /* Fade effect */
   color: #001e2b;
+  
 }
 .answerBubble.appear {
   opacity: 1;
@@ -68,4 +62,5 @@
   border-radius: 20%;
   object-position: top;
   margin-bottom: 10px;
+  margin-top: 10px;
 }
