Full website layout
* feature/Chat component can read input values

* filters = starting overview

* checkpoint for branch merge

* features/add autoscroll, add suggestes questions and add text bubbles for bot and user

* Separated header from separate pages = added redux and login component

* header final (pr again + lib)

* just in case

* Removed SideNav not existing element.

* ui/ finished charts component, finished chat component, finished agent run sessions filter component

* update number inputs and change login name

* started LoginManager to start with the fleet construction view

* ui/ fleet construction

* overview casi final

* subir overview

* overview- Details Component +begin with no format Details

* set fleet size into redux for a given user

* delete typo file Result -> results

* Added redux in results, and added Sidebar in Code component

* Fixed typo  from isOpen to isModalOpen for redux

* Added some default value if no value is unputed at fleet creation

* part 2

* Details with code component, redux, and result with css (missing some context to be filled from doc model

* Copied InfoWizard Template and broke content into skeleton points

* Added redux to stop using props for closing modal + car, and separated for readability components

* end of details card + specs

* Starting branch for changes

* Fixed error with class to className in Login, finished front of fleet config with redux and document model

* comments PR:)

* finished these pr requests

* Improve look of button :)

* added current google api system

* chat design fix

* added message selecting

* update message select icon

* small change

* fix(front): unresolved merge files

* enh(front): prevent initial message to be selectable, align user icon right, replace Send icon with Visibility icon

---------

Co-authored-by: fermofou <fermofou@gmail.com>
Co-authored-by: angie <angie.guemes@mongodb.com>

--- a/frontend/components/FilterComponent/FilterComponent.module.css
+++ b/frontend/components/FilterComponent/FilterComponent.module.css
@@ -4,7 +4,6 @@
   height: 100%;
   padding: 10px;
   box-sizing: border-box;
-  border-left: gray 1px solid;
 }
 
 .cardWrapper {
@@ -24,7 +23,7 @@
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(2, auto);
   gap: 12px;
-align-content: start; /* 👈 forces content to stick to top */
+  align-content: start;
 
 }
 
