checked code for any insecure functions and added a different shade of text for thinking

--- a/frontend/components/TextBubbleComponent/TextBubbleComponent.module.css
+++ b/frontend/components/TextBubbleComponent/TextBubbleComponent.module.css
@@ -77,3 +77,18 @@
   gap: 10px;
   justify-content: flex-end;
 }
+
+.loader {
+   margin: auto;
+   border: 5px solid #EAF0F6;
+   border-radius: 50%;
+   border-top: 5px solid #00ED64;
+   width: 20px;
+   height: 20px;
+   animation: spinner 4s linear infinite;
+}
+
+@keyframes spinner {
+   0% { transform: rotate(0deg); }
+   100% { transform: rotate(360deg); }
+}
