--- a/frontend/components/InfoWizard/InfoWizard.module.css
+++ b/frontend/components/InfoWizard/InfoWizard.module.css
@@ -11,6 +11,10 @@
   justify-content: center; /* Centers content vertically */
 }
 
+.modal button[data-testid="lg-modal-close"]{
+  position: absolute;
+}
+
 .modalContent {
   display: flex;
   flex-direction: column;
