--- a/frontend/components/FollowUpQuestionsComponent/FollowUpQuestionsComponent.module.css
+++ b/frontend/components/FollowUpQuestionsComponent/FollowUpQuestionsComponent.module.css
@@ -18,7 +18,7 @@
     display: flex;
     flex-direction: column;
     gap: 5px;
-    align-items: end;
+    align-items: flex-end;
     justify-content: center;
 }
 
